# kafka_rust_ai

./: Cargo.toml  docker-compose.yml  rustfmt.toml
agent/: agent.toml  instructions.md
agent/.agent/: conv.json
data/: data_with_speed.txt  data_without_speed.txt
src/: main.rs
src/application/: mod.rs
src/application/client/: car_controller.rs  mod.rs
src/application/services/: car_service.rs
src/common/utils/: cli.rs  files.rs
src/core/: mod.rs
src/core/agent/: config.rs  mod.rs
src/core/agent/ais/: asst.rs  mod.rs  msg.rs
src/core/consumer/: event_consumer.rs  kafka_consumer.rs  mod.rs
src/core/kafka_admin/: mod.rs
src/core/publisher/: event_publisher.rs  kafka_publisher.rs  mod.rs
src/domain/: mod.rs
src/domain/common/: error.rs
src/domain/infrastructure/: channel.rs  event.rs  event_data.rs  event_topic.rs  kafka_message.rs  mod.rs
src/domain/service_events/: car_controller_event.rs  mod.rs
src/gateway/: mod.rs
src/gateway/command_creator/: command_creator.rs  mod.rs
src/gateway/command_executor/: command_executor.rs
src/gateway/image_labelling/: labeller.rs  mod.rs
src/gateway/infrastructure/: event_handler.rs  kafka_gateway.rs  mod.rs
src/gateway/infrastructure/live/: event_handler_live.rs  mod.rs
