[package]
name = "kafka_rust_ai"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }

kafka = "0.10.0"
rdkafka = "0.36.2"


serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.8"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

async-openai = "0.18.1"

dialoguer = "0.11.0"
console = "0.15.0"
textwrap = "0.16.0"

walkdir = "2.4.0"
globset = "0.4.6"

chrono = { version = "0.4.34", features = ["serde"] }

derive_more = { version = "1.0.0-beta.6", features = ["from", "display", "deref"] }



#[dev-dependencies]
#testcontainers = "0.15.0"
